# gimoji

./: CONTRIBUTING.md  Cargo.toml  emojis.json  gen-emojis.py
src/: colors.rs  emoji.rs  main.rs  search_entry.rs  selection_view.rs  terminal.rs
