[package]
name = "gimoji"
description = "Easily add emojis to your git commit messages 🎉"
version = "1.2.0"
edition = "2021"
license = "MIT"
authors = ["Zeeshan Ali Khan <zeeshanak@gnome.org>", "jhonboy121 <github.skydiver867@passmail.net>"]
repository = "https://github.com/jhonboy121/gimoji"
keywords = ["CLI", "git", "emoji"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["use-dev-tty"] }
ratatui = "0.27.0"
regex = { version = "1.10.6", default-features = false, features = [
    "std",
    "perf",
    "unicode-case",
] }
arboard = { version = "3.4.0", default-features = false, features = [
    "wayland-data-control",
] }
terminal-light = "1.4.0"
anyhow = "1.0.86"
cfg-if = "1.0.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", default-features = false, features = ["process"] }

[build-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
databake = { version = "0.1.8", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
